--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "ignite-desafio-01",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://LucasNative.github.io/rocketseat-ignite-todo",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "phosphor-react": "^1.4.1",
@@ -19,6 +22,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
